--- a/k9batik/src/test/resources/stylesheets/designer.css
+++ b/k9batik/src/test/resources/stylesheets/designer.css
@@ -349,6 +349,13 @@ svg {
 	--kite9-vertical-align: center;
 }
 
+/* ports */
+
+[k9-elem=socket] {
+    --kite9-type: port;
+}
+
+
 /* Classes And Styles */
 
 .copyright {
