Messing around with text baseline

--- a/server/kite9-server-java/src/main/resources/static/public/templates/common/formats/formats.css
+++ b/server/kite9-server-java/src/main/resources/static/public/templates/common/formats/formats.css
@@ -8,6 +8,11 @@
   --kite9-horizontal-align: center;
 }
 
+[k9-elem=textarea] text {
+	alignment-baseline: baseline;
+}
+
+
 /** image-editable format */
 
 [k9-elem=image-editable],
