Fixed grid palette

--- a/server/kite9-server-java/src/main/resources/static/public/templates/adl/adl.css
+++ b/server/kite9-server-java/src/main/resources/static/public/templates/adl/adl.css
@@ -16,3 +16,4 @@
 @import url(/public/templates/containers/containers.css);
 @import url(/public/templates/links/links.css);
 @import url(/public/templates/labels/labels.css);
+@import url(/public/templates/grid/grid.css);
