--- a/server/kite9-server-java/src/main/resources/static/public/templates/flowchart/flowchart.css
+++ b/server/kite9-server-java/src/main/resources/static/public/templates/flowchart/flowchart.css
@@ -1,24 +1,8 @@
-@import url(/public/templates/common/common.css);
-@import url(/public/templates/containers/common-containers.css);
-@import url(/public/templates/links/common-links.css);
-@import url(/public/templates/labels/common-labels.css);
-@import url(/public/templates/grid/common-grid.css);
-@import url(/public/fonts/metropolis/metropolis.css);
+@import url('/public/templates/adl/adl.css');
+@import url('/public/templates/editor/editor.css');
+@import url('/public/fonts/metropolis/metropolis.css');
 @import url(flowchart-shapes.css);
 @import url(flowchart-components.css);
-@import url(/public/templates/editor/editor.css);
-
-@script url('flowchart.js');
-
-@params {
-	palettes: 
-    url('/public/templates/links/common-links.adl') "link"
-    url('/public/templates/links/common-ends.adl') "end"
-    url('palette-inline.adl') "connected risk"
-    url('palette-captioned.adl') "connected risk"  
-    url('/public/templates/containers/common-containers.adl') "connected"
-    url('/public/templates/grid/common-grid.adl') "cell table";
-}
 
 [k9-elem=textarea],
 [k9-elem=label] {
