Fixed font-awesome example

--- a/server/kite9-server-java/src/main/resources/static/public/templates/font-awesome/font-awesome.css
+++ b/server/kite9-server-java/src/main/resources/static/public/templates/font-awesome/font-awesome.css
@@ -1,4 +1,5 @@
 @import url('/public/fonts/fontawesome/fontawesome.css');
+@import url('/public/templates/adl/adl.css');
 
 /**
  * Displays a font-awesome symbol on the screen
