--- a/server/kite9-server-java/src/main/resources/static/public/templates/formats/formats.css
+++ b/server/kite9-server-java/src/main/resources/static/public/templates/formats/formats.css
@@ -1,7 +1,7 @@
 /** text-inline, text-inline-fixed format */
 
-[k9-format=text-inline],
-[k9-format=text-inline-fixed] {
+[k9-format=text-shape-inline],
+[k9-format=text-fixed] {
   --kite9-type: text;
   --kite9-vertical-align: center;
   --kite9-connection-align: 50%;
@@ -21,8 +21,8 @@
   --kite9-margin: 10pt;
 }
 
-[k9-format=image] > [k9-elem=front],
-[k9-format=image-fixed] > [k9-elem=back]  {
+[k9-format=image] > [k9-texture=solid],
+[k9-format=image-fixed] > [k9-texture=solid]  {
   fill: white;
   fill-opacity: .01;
 }
@@ -47,22 +47,22 @@
 
 /* text-captioned, text-portrait format */
 
-[k9-format=text-captioned],
-[k9-format=text-portrait] {
+[k9-format=text-shape-captioned],
+[k9-format=text-shape-portrait] {
 	--kite9-type: container;
 	--kite9-sizing: minimize;
 	--kite9-margin: 16pt;
 }
 
 
- [k9-format=text-portrait] {
+ [k9-format=text-shape-portrait] {
   --kite9-layout: down;
 }
 
 /* depiction:  a shape inside an object */
 
-[k9-format=text-captioned] > [k9-elem=depiction],
-[k9-format=text-portrait] > [k9-elem=depiction],
+[k9-format=text-shape-captioned] > [k9-elem=depiction],
+[k9-format=text-shape-portrait] > [k9-elem=depiction],
 [k9-format=shape] > [k9-elem=depiction] {
   --kite9-type: container;
   --kite9-min-size: 50pt 50pt;
@@ -73,8 +73,8 @@
 
 /* caption:  text inside the object */
 
-[k9-format=text-portrait] > [k9-elem=caption],
-[k9-format=text-captioned] > [k9-elem=caption]  {
+[k9-format=text-shape-portrait] > [k9-elem=caption],
+[k9-format=text-shape-captioned] > [k9-elem=caption]  {
   --kite9-type: text;
   --kite9-padding: 5pt;
   --kite9-horizontal-align: center;
@@ -86,12 +86,12 @@
 
 /* align: aligns the contents of the object */
 
-[k9-format=text-captioned] > [k9-elem=shape-align] {
+[k9-format=text-shape-captioned] > [k9-elem=shape-align] {
   --kite9-type: link;
 }
 
-[k9-format=text-captioned] > [k9-elem=shape-align] > [k9-elem=from],
-[k9-format=text-captioned] > [k9-elem=shape-align] > [k9-elem=to] {
+[k9-format=text-shape-captioned] > [k9-elem=shape-align] > [k9-elem=from],
+[k9-format=text-shape-captioned] > [k9-elem=shape-align] > [k9-elem=to] {
   --kite9-type: link-end;
 }
 
